<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General Strings -->

    <string name="app_name">Spielesammlung</string>
    <string name="action_settings">Einstellungen</string>
    <string name="new_game">Neues Spiel</string>
    <string name="save">Speichern</string>
    <string name="load">Laden</string>
    <string name="quit">Beenden</string>
    <string name="menu">Menü</string>
    <string name="win">Gewonnen!\n Antippen für Neues Spiel!</string>
    <string name="lose">Verloren!\n Antippen für Neues Spiel!</string>
    <string name="over">Game over!\n Antippen für Neues Spiel!</string>
    <string name="confirmtext">Wollen Sie ein Spiel laden?</string>
    <string name="soundon">Musik an</string>
    <string name="soundoff">Musik aus</string>
    <string name="succsave">Ihr aktueller Stand wurde gespeichert!</string>
    <string name="errsave">Ihr aktueller Stand konnte nicht gespeichert werden!</string>
    <string name="succload">Spielstand erfolgreich geladen!</string>
    <string name="errload">Es konnte leider kein Spielstand geladen werden!</string>

    <!-- Main Menu Strings -->
    
    <string name="Top_Text">Spielname</string>
    <string name="Bottom_Text">Highscore: </string>
    <string name="Game_Icon">Spiel Icon</string>
    <string name="Plus_Icon">Plus Icon</string>

    <!-- Sudoku Strings -->

    <string name="sudoku">Sudoku</string>
    <string name="del">del</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <!-- Mines Strings -->

    <string name="mines">Mines</string>
    <string name="mines_remaining">Minen</string>
    <string name="mine">*</string>
    <string name="flag">!</string>
    <string name="mark">Markieren</string>

    <!-- Spaceslider Strings -->

    <string name="spaceslider">Spaceslider</string>
    <string name="lives_remaining">Leben</string>
    <string name="difficulty">Schwere</string>

</resources>